Fix overflow on game container

--- a/src/AVCMS/Bundles/Games/resources/css/avcms_games.scss
+++ b/src/AVCMS/Bundles/Games/resources/css/avcms_games.scss
@@ -1,5 +1,6 @@
 #avcms-game-container {
   margin-bottom: 15px;
+  overflow: auto;
 }
 
 @mixin fullscreen-game-container() {
